fixed size issue on mobile

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
 	color: #fff;
 }
 
+canvas {
+	width: 100%;
+}
+
 .main-header {
 	position: absolute;
 	top: 0;
